--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.11.2",
     "prisma": "^4.16.2"
   }
 }
