--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
+    "stripe": "^12.16.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
