--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stripe:listen": "stripe listen --forward-to localhost:3000/api/payment/sucess",
+    "stripe:listen": "stripe listen --forward-to localhost:3000/api/payment/success",
     "postinstall": "npx prisma generate"
   },
   "prisma": {
